--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,16 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,19 +33,21 @@ jobs:
       - name: Build project
         run: npm run build
       
-      - name: Deploy to docs folder
-        run: |
-          # Remove old docs folder
-          rm -rf docs
-          # Copy dist to docs
-          cp -r dist docs
-          # Add .nojekyll to docs
-          touch docs/.nojekyll
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
       
-      - name: Commit and push to docs
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add docs
-          git diff --staged --quiet || git commit -m "Deploy to docs folder [skip ci]"
-          git push 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './dist'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 
