--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@stagewise-plugins/react": "^0.4.9",
+    "@stagewise/toolbar-react": "^0.4.9",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
