--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#fed7aa",
   "theme_color": "#fb923c",
-  "orientation": "any",
+  "orientation": "portrait",
   "scope": "/InteractivePuzzle/",
   "icons": [
     {
